@@ -163,4 +163,5 @@ shady-skin Revision History
 2015-05-24
 
 - Some more improvements for plex-template (III)
-- Fixed height of plex-header 
+- Fixed height of plex-header
+- Added translations for columns- and rows-info (plex-template)
